add new route for find with multi name
